# XSmallHMI

./: CMakeLists.txt  LICENSE  License.txt
src/: main.cpp  xs_core.hpp
tests/: test_core.cpp
